# template

./: .actrc  .commitlintrc.js  .cspell.json  .envrc  .gitignore  .jscpd.json  .mega-linter.yaml  .release.json  .tools.json  CHANGELOG.md  init.sh  package-lock.json  package.json  pyproject.toml  shell.cd.nix  shell.ci.nix  shell.nix  tasks.py
.github/linters/: .secretlintignore  .yamllint.yaml
.github/workflows/: deployment.yaml  integration.yaml  sync.yaml
.husky/: commit-msg  pre-commit  prepare-commit-msg
config/linters/: .cspell.json
config/settings/: default.json
linters/: .jscpd.json  .prettierignore  .prettierrc.yaml
nix/: default.nix  sources.json  sources.nix
scripts/: config.py  fingerprint.py  linters.py
scripts/lib/: env.py  file.py
settings/: default.json
