[tool.poetry]
name = "template"
version = "1.0.0"
description = ""
authors = ["Sam Craig <sam@growthat.agency>"]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
jsonmerge = "^1.8.0"
PyYAML = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
